--- a/css/one.css
+++ b/css/one.css
@@ -59,8 +59,9 @@ top: 0px;
  } */
   .child{
     height: 200px;
-    width: 350px;
-
+    width: 200px;
+    animation-name: test;
+    animation-duration: 3s;
   }
   .child:nth-child(1){
     background-color: blue;
@@ -90,4 +91,36 @@ top: 0px;
     align-items:center;
     justify-content:space-evenly;
     flex-wrap: wrap;
+}
+nav{
+  width: 100%;
+  height: 150px;
+  display: flex;
+  position: fixed;
+  justify-content: center;
+  align-content: center;
+ 
+}
+.top{
+  top: 20px;
+  position: absolute ;
+  background-color: aqua;
+  width: 80%;
+  height: 80PX;
+  border-radius: 50px;
+  
+}
+.child:hover{
+  
+  animation-name: test;
+  animation-duration: 3s;
+}
+@keyframes test {
+  from{
+    background-color: aqua;
+  }
+  to{
+  background-color: aqua;
+  }
+ 
 }
