--- a/css/one.css
+++ b/css/one.css
@@ -57,70 +57,41 @@ top: 0px;
     z-index: 10;
     color: aliceblue;
  } */
-  .child{
-    height: 200px;
-    width: 200px;
-    animation-name: test;
-    animation-duration: 3s;
-  }
-  .child:nth-child(1){
-    background-color: blue;
-  }
-  .child:nth-child(2){
-    background-color: cadetblue;
 
-  }
-  .child:nth-child(3){
-    background-color: aqua;
-  }
-
-  .child:nth-child(4){
-    background-color: blue;
-  }
-  .child:nth-child(5){
-    background-color: cadetblue;
-
-  }
-  .child:nth-child(6){
-    background-color: aqua;
-   } .parent{
-    background-color: darkgrey;
+/* 
+.container{
     height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items:center;
-    justify-content:space-evenly;
-    flex-wrap: wrap;
+    width:100vw;
+    background-color: red;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-area: 
+    "one two two seven"
+    "one three four eight"
+    "one five six eight";
 }
-nav{
-  width: 100%;
-  height: 150px;
-  display: flex;
-  position: fixed;
-  justify-content: center;
-  align-content: center;
- 
+.container div:nth-child(1){
+  grid-area: one;
+  background-color: aquamarine;
+} */
+.container {
+   background-color: tan;
+   height: 100vh;
+   width: 100vw;
 }
-.top{
-  top: 20px;
-  position: absolute ;
-  background-color: aqua;
-  width: 80%;
-  height: 80PX;
-  border-radius: 50px;
-  
+.parent {
+   transition: .5s;
+   background-color: blue;
+   position: relative;
+   width: 1000px;
+   height: 1000px;
 }
-.child:hover{
-  
-  animation-name: test;
-  animation-duration: 3s;
+.parent:hover .child{
+   background-color: red;
 }
-@keyframes test {
-  from{
-    background-color: aqua;
-  }
-  to{
-  background-color: aqua;
-  }
- 
-}
+.child{
+   background-color: aqua;
+   width: 300px;
+   height: 300px;
+   position: absolute;
