--- a/css/one.css
+++ b/css/one.css
@@ -75,7 +75,7 @@ top: 0px;
   grid-area: one;
   background-color: aquamarine;
 } */
-.container {
+/* .container {
    background-color: tan;
    height: 100vh;
    width: 100vw;
@@ -94,4 +94,29 @@ top: 0px;
    background-color: aqua;
    width: 300px;
    height: 300px;
-   position: absolute;
+   position: absolute; */
+   body{
+      background-color: aqua;
+   }
+.p{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   
+   }
+   img{
+      height: 80px;
+      margin: 20px;
+      border-radius: 50%;
+      padding: 10px; background-color: WHITE;
+      z-index: 2;
+     
+   }
+   .facebook0::before{
+      background-color:rgb(255, 0, 0);
+      content: '';
+
+   }
+   img:hover{
+      background-color: darkgray;
+   }
