--- a/css/test.css
+++ b/css/test.css
@@ -1,13 +1,24 @@
+*{
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+}
+footer{
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-evenly;
+    align-items:center;
+    flex-direction: column;
+    width: 100vW;
+    height:400px;
+    
 
-.container{
-    height: 100vh;
-    width:100vw;
-    background-color: red;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr ;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
-    grid-area: 
-    "one two two seven"
-    "one three four eight"
-    "one five six eight";
+}
+.topfooter{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    height: 300PX;
+
 }
