--- a/session/notes/style.css
+++ b/session/notes/style.css
@@ -115,7 +115,7 @@ button:active{
 }
 .Buttons {
   height: 100%;
-
+  padding: 15px;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -124,6 +124,11 @@ button:active{
 .note {
   width: 60%;
   color: white;
+}
+.note h3 {
+  margin: 10px;
+  font-size: 25px;
+  font-weight: 900;
 }
 .hide {
   display: none;
@@ -139,13 +144,22 @@ button:active{
   font-weight: 700;
   text-transform: uppercase;
   cursor: pointer;
-  transition: .3s
+  transition: .3s;
 
 }
 .delete:hover {
   background-color: #333;
   color: #FD0100;
   border-color: #FD0100;
+  }
+  .card{
+    background-color:#333740;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    padding: 55PX 40PX;
   }
   @media screen and (max-width: 600px) {
   .newNoteContainer {
@@ -155,14 +169,4 @@ button:active{
     flex-direction: column;
     align-items: center;
     }
-  }
-  .card{
-    width: calc(100vh - 50%(100vh));
-    height: 100%;
-    background-color:#333740;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 10px;
   }
